tests/rosetta/out/Zig/check-that-file-exists.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencheck-that-file-exists2897613141/001/prog.zig:37:5: error: redeclaration of 'main'
/tmp/TestMochiZigGoldencheck-that-file-exists2897613141/001/prog.zig:24:1: note: other declaration here
